# langbasics

./: .gitignore  LICENSE  README.md
python/: README.md  manage.py  mkdocs.yml  pyproject.toml
python/docs/: index.md
python/scripts/: doc-serve  install  prepare  run  test  uninstall
python/src/rot13/: __init__.py  __main__.py
python/tests/: test_rot13.py
rust/: Cargo.toml  README.md
rust/src/: main.rs
src/: lib.rs  main.rs
